--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
 ********************************************
 *            version history
 ********************************************
+1.50
+* #264 support different redirect semantic
+
 1.4.3
 * #250 Two `WebSocketConnectionManager` exists
 * #248 HttpServerExchange cannot have both async IO resumed and dispatch() called in the same cycle
@@ -286,7 +289,7 @@
     <okhttp.version>3.8.0</okhttp.version>
     <osgl-tool.version>1.3.1</osgl-tool.version>
     <osgl-genie.version>1.1.2</osgl-genie.version>
-    <osgl-mvc.version>1.1.1</osgl-mvc.version>
+    <osgl-mvc.version>1.2.0-SNAPSHOT</osgl-mvc.version>
     <osgl-storage.version>1.2.0</osgl-storage.version>
     <osgl-tool-ext.version>1.0.1</osgl-tool-ext.version>
     <reflectasm.version>1.11.3</reflectasm.version>
