--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 *            version history
 ********************************************
 1.50
+* #266 Enhance Job support on logging and process reporting
 * #264 support different redirect semantic
 
 1.4.3
