--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 *            version history
 ********************************************
 1.50
+* #277 Add utility methods in `Controller.Util` to support more HTTP response type
 * #266 Enhance Job support on logging and process reporting
 * #264 support different redirect semantic
 
@@ -252,7 +253,7 @@
   <groupId>org.actframework</groupId>
   <artifactId>act</artifactId>
   <packaging>jar</packaging>
-  <version>1.5.0-SNAPSHOT</version>
+  <version>1.5.0-x-SNAPSHOT</version>
 
   <name>ACT Framework</name>
   <description>The ACT full stack MVC framework</description>
@@ -301,7 +302,7 @@
     <okhttp.version>3.8.1</okhttp.version>
     <osgl-tool.version>1.3.1</osgl-tool.version>
     <osgl-genie.version>1.1.2</osgl-genie.version>
-    <osgl-mvc.version>1.2.0</osgl-mvc.version>
+    <osgl-mvc.version>2.0.0-SNAPSHOT</osgl-mvc.version>
     <osgl-storage.version>1.2.0</osgl-storage.version>
     <osgl-tool-ext.version>1.0.1</osgl-tool-ext.version>
     <reflectasm.version>1.11.3</reflectasm.version>
