--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 * #289 Support inline template
 * #266 Enhance Job support on logging and process reporting
 * #264 support different redirect semantic
+* update osgl-tool to 1.5.0
 
 1.4.6
 * Catch up update to 1.3.9-LTS
@@ -337,7 +338,7 @@
     <progressbar.version>0.5.5</progressbar.version>
     <joda-time.version>2.9.9</joda-time.version>
     <okhttp.version>3.8.1</okhttp.version>
-    <osgl-tool.version>1.4.0</osgl-tool.version>
+    <osgl-tool.version>1.5.0-SNAPSHOT</osgl-tool.version>
     <osgl-genie.version>1.1.3</osgl-genie.version>
     <osgl-mvc.version>1.2.0</osgl-mvc.version>
     <osgl-storage.version>1.3.0</osgl-storage.version>
