--- a/pom.xml
+++ b/pom.xml
@@ -340,7 +340,7 @@
     <okhttp.version>3.8.1</okhttp.version>
     <osgl-tool.version>1.5.0-SNAPSHOT</osgl-tool.version>
     <osgl-genie.version>1.1.3</osgl-genie.version>
-    <osgl-mvc.version>1.2.0</osgl-mvc.version>
+    <osgl-mvc.version>1.3.0-SNAPSHOT</osgl-mvc.version>
     <osgl-storage.version>1.3.0</osgl-storage.version>
     <osgl-tool-ext.version>1.0.1</osgl-tool-ext.version>
     <reflectasm.version>1.11.3</reflectasm.version>
